--- a/apirest-books/src/main/resources/application.properties
+++ b/apirest-books/src/main/resources/application.properties
@@ -1,22 +1,22 @@
-spring.datasource.url=jdbc:mysql://localhost/db_books?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://dbapirestbooks.citalub7gmjb.us-east-1.rds.amazonaws.com:3306/db_books?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost/db_books?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://dbapirestbooks.citalub7gmjb.us-east-1.rds.amazonaws.com:3306/db_books?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=12345
-#spring.datasource.password=America18j&n
+#spring.datasource.password=12345
+spring.datasource.password=America18j&n
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
-#server.port=5000
+server.port=5000
 
 #spring security
 
-spring.security.user.name=jair
-spring.security.user.password=jair123
+#spring.security.user.name=jair
+#spring.security.user.password=jair123
 
 
 #swagger configuration
-springdoc.swagger-ui.enabled=true
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.path=/swagger-ui.html
+#springdoc.swagger-ui.enabled=true
+#springdoc.api-docs.enabled=true
+#springdoc.swagger-ui.path=/swagger-ui.html
 
